--- a/app/views/gradations/_grades.html.erb
+++ b/app/views/gradations/_grades.html.erb
@@ -39,7 +39,7 @@
 
       <% students = @gradations.students.sort_by {|a| a.last_name } %>
       <% for student in students %>
-			  <tr class="calc <%= cycle('odd', 'even') %>"  id='<%= student.id %>' />
+			  <tr class="calc <%= cycle('odd', 'even') %>"  id='<%= student.id %>'>
 				  <td class='score'>0.0</td>
 				  <%= content_tag :td, student.full_name, :id => student.id %>
 				  <% a_counter = counter + 1 %>
