--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -43,6 +43,7 @@
 				<%= submit_tag 'Save', :class => 'btn positive' %>
 				<%= link_to 'Cancel', {:action=> 'index', :controller=> 'users/'+user.class.name.tableize}, :class => 'btn standard' %>
 			</div>
+     </fieldset>
 	<% end %>
 </div>
 
