--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -25,7 +25,7 @@ If you find something interesting, please <a href='mailto:gradesheet@kangaroobox
   <li>Fixed a bug when updating/creating a course and it would not save the
   changes if there were any errors.</li>
   <li>You'll notice that the "Gradations" menu item has changed names and is now
-  called "<%= link_to "Evaluations", gradations_path %>".  This is due to the 
+  called "<%= link_to "Evaluations", evaluations_path %>".  This is due to the
   fact that we are working on incorporating all the ways to evaluate a student 
   into one menu item.  This currently includes assignments, skills, and comments.  
   It is currently under heavy construction and all the tabs don't work yet, 
