--- a/app/views/evaluations/_skills.html.erb
+++ b/app/views/evaluations/_skills.html.erb
@@ -1,4 +1,3 @@
-
 <% skills = @gradations.assignments %>
 
 
@@ -6,7 +5,7 @@
   # and assignments in the COLUMN.  Along the way we'll also alert the user 
   # when there are missing students or assignments. %>
 <form id='grade_grid'>
-<table class='grade-grid sortable scroll'>
+<table class='grade-grid sortable scroll master'>
 	<thead>
 		<tr>
 			<th>Student Name</th>
