--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -58,7 +58,7 @@ tr.help:hover td{background-color: #009900;}
 
 /*** Forms ***/
 .spacer {padding-left:80px; color:#555555; padding-top: 20px;}
-fieldset {border:none; margin:0px;}
+fieldset {border:none; margin:0px; padding:0px;}
 fieldset legend {text-align: center; font-size:2em;}
 fieldset label {display:block;margin-top:4px;float:left; width:125px;text-align:right;padding-right:15px;clear:right;font-weight:bold;}
 fieldset .req {background: transparent url(/images/bullet_red.png) no-repeat scroll right center;}
