--- a/app/views/settings/_settings_list.erb
+++ b/app/views/settings/_settings_list.erb
@@ -4,9 +4,8 @@
 		{:name => 'Import Data', :url => '/settings/imports'},
 		{:name => 'Grading Periods', :url => '/settings/terms'},
 		{:name => 'Grading Scales', :url => '/settings/grading_scales'},
-    {:name => 'Supporting Skills', :url => '/settings/supporting_skills'},
-		{:name => 'Supporting Skill Codes', :url => '/settings/supporting_skill_codes'},
-		{:name => 'Supporting Skill Categories', :url => '/settings/supporting_skill_categories'}]#,
+    {:name => 'Supporting Skills', :url => '/settings/supporting_skill_categories'},
+		{:name => 'Supporting Skill Codes', :url => '/settings/supporting_skill_codes'}]
 #		{:name => 'School Calendar', :url => '/settings/events'}]
 %>
 		
