--- a/public/stylesheets/tabs.css
+++ b/public/stylesheets/tabs.css
@@ -18,23 +18,24 @@ ul.subsection_tabs li.tab {
 ul.subsection_tabs li.tab a {
 	height:20px;
 	padding:4px 20px;
-	background-color:#fff;
+	background-color:#eee;
 	color:#666;
 	width:80px;
-}
-
-ul.subsection_tabs li.tab a:hover {
-	color:#333;
-}
-
-ul.subsection_tabs li.tab a.active {
-	background-color:#C3D9FF;
 	-moz-border-radius-topleft: 4px;
 	-moz-border-radius-topright: 4px;
 	-webkit-border-top-right-radius: 4px;
 	-webkit-border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 	border-top-left-radius: 4px;
+}
+
+ul.subsection_tabs li.tab a:hover {
+	color:#333;
+  background-color: #999;
+}
+
+ul.subsection_tabs li.tab a.active {
+	background-color:#C3D9FF;
 }
 
 ul.subsection_tabs li.source_code {
