Updated the Dashboard with the latest code changes

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -20,7 +20,16 @@ If you find something interesting, please <a href='mailto:gradesheet@kangaroobox
 
 <h3>Go <a href="#auth">here</a> for details on logging into the system.</h3>
 
-<h3>Latest News - June 2, 2009</h3>
+<h3>Latest News - June 16, 2009</h3>
+<ul>
+  <li>The <a href="settings/supporting_skill_categories">Supporting Skills</a> are now in place and should 
+  be available to use in the <%= link_to "Courses", courses_path %> screen.
+  changes if there were any errors.</li>
+  <li>Integrating the supporting Skills functionality into the report card system
+  is in progress now and should become available to test next week.</li>
+</ul>
+
+<h3>June 2, 2009</h3>
 <ul>
   <li>Fixed a bug when updating/creating a course and it would not save the
   changes if there were any errors.</li>
