Added student transcript report  * it's not complete but the outline is there  * also added the Prawn-Format plugin to make some thing easier(possible)

--- a/app/views/reports/_report_list.erb
+++ b/app/views/reports/_report_list.erb
@@ -1,5 +1,6 @@
 <% reports = [
 		{:name => 'Report Card', :url => '/reports/report_card'},
+		{:name => 'Student Transcript', :url => '/reports/student_transcript'},
 		{:name => 'Student Roster', :url => '/reports/student_roster'}]%>
 		
 <table>
