--- a/app/views/settings/_settings_list.erb
+++ b/app/views/settings/_settings_list.erb
@@ -2,7 +2,7 @@
 		{:name => 'Assignment Types', :url => '/settings/assignment_categories'},
 		{:name => 'Campus Info', :url => '/settings/sites'},
 		{:name => 'Import Data', :url => '/settings/imports'},
-		{:name => 'Grading Periods', :url => '/settings/terms'},
+		{:name => 'Grading Periods', :url => '/settings/grading_periods'},
 		{:name => 'Grading Scales', :url => '/settings/grading_scales'},
     {:name => 'Supporting Skills', :url => '/settings/supporting_skill_categories'},
 		{:name => 'Supporting Skill Codes', :url => '/settings/supporting_skill_codes'}]
@@ -17,7 +17,7 @@
 	</thead>
 	<tbody>
 		<% for item in items %>
-			<tr class="<%= cycle('odd', 'even') + (current_page?(:controller => item[:url]) ? ' current' : '') %>" 
+			<tr class="<%= cycle('odd', 'even') + (current_page?(item[:url]) ? ' current' : '') %>"
 					onclick="location.href='<%= url_for(item[:url]) %>'">
 				<td><a href='<%= item[:url]%>'><%= item[:name] %></a></td>
 			</tr>
